--- a/index.html
+++ b/index.html
@@ -6,13 +6,51 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Prework Study Guide</title>
   </head>
+
   <body>
     <header id="header">
       <h1>Prework Study Guide</h1>
-      <img src="./assets/bowtie-cat.png" alt="Profile image of cat wearing a bow tie." />
+      <img 
+      src="./assets/bowtie-cat.png" 
+      alt="Profile image of cat wearing a bow tie." 
+      />
     </header>
+    
     <main>
-      <!-- Student code goes here -->
+      <section class="card" id="html-section">
+        <h2>HTML</h2>
+        <ul>
+          <li>Enter your HTML notes here</li>
+          <li>The head element contains information about the webpage.</li>
+          <li>The body element represents the visible content shown to the user.</li>
+          <li>Head elements are usually never seen by users.</li>
+          <li>Body elements are what users see on a webpage.</li>
+        </ul>
+      </section>
+
+      <section class="card" id="css-section"> 
+        <h2>CSS</h2>
+        <ul>
+          <li>Enter your CSS notes here</li>
+        </ul>
+      </section>
+
+      <section class="card" id="git-section">
+        <h2>Git</h2>
+        <ul>
+          <li>Enter your Git notes here</li>
+          <li>git status: shows current branch</li>
+          <li>git branch: lists your branches</li>
+          <li>git clone [url]: retrieves an entire existing directory as a Git repository</li>
+        </ul>
+      </section>
+
+      <section class="card" id="javascript-section">
+        <h2>JavaScript</h2>
+        <ul>
+          <li>Enter your JavaScript notes here</li>
+        </ul>
+      </section>
     </main>
 
     <footer>
@@ -20,3 +58,4 @@
     </footer>
   </body>
 </html>
+ 
