added CSS to project

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./assets/style.css">
     <title>Prework Study Guide</title>
   </head>
 
@@ -32,6 +33,10 @@
         <h2>CSS</h2>
         <ul>
           <li>Enter your CSS notes here</li>
+          <li>A margin indicates how much space you want around it.</li>
+          <li>A padding adds space inside an element.</li>
+          <li>The "rel" element specifies the relationship between the current document and the linked document resource.</li>
+          <li>The "href" element specifies the location (URL) of the external resource.</li>
         </ul>
       </section>
 
