added js to website

--- a/index.html
+++ b/index.html
@@ -55,6 +55,10 @@
         <h2>JavaScript</h2>
         <ul>
           <li>Enter your JavaScript notes here</li>
+          <li>A function is a set of instructions that tells the computer how to perform a certain task.</li>
+          <li>A variable is a named container that lets you store data in your code.</li>
+          <li>JavaScript allows you to add interactivity in your website.</li>
+          <li>An array is the named variable that holds groups of data.</li>
         </ul>
       </section>
     </main>
